Fix canvas position and video visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,14 +40,26 @@ header .right {
 }
 
 header .left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
 }
 
 header .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
   align-items: flex-end;
 }
 
@@ -101,6 +113,8 @@ h2 {
 }
 
 #toolbar-home {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -203,34 +217,41 @@ strong {
   font-weight: bold;
 }
 
-.flex-container {
+.centre {
+  position: absolute;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+
 }
 
 video {
   position: absolute;
   visibility: hidden;
+  display: none;
   width: 100%;
   height: 100%;
 }
 
 #canvas-camera {
-  position: absolute;
   z-index: -1;
   pointer-events: none;
 }
 
 #canvas-draw {
   z-index: 1;
-  position: absolute;
 }
 
 #image-save {
   display: none;
-  position: absolute;
 }
 
 .modal {
